--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   box-sizing: border-box; }
 
 html {
-  font-family: sans-serif;
+  font-family: "Almarai", sans-serif;;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
@@ -68,8 +68,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem; }
 
 p {
+  font-size: 18px;
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+   text-align: center;}
 
 abbr[title],
 abbr[data-original-title] {
@@ -148,7 +150,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: "Almarai", sans-serif;
   font-size: 1em; }
 
 pre {
@@ -197,7 +199,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+  font-family: "Almarai", sans-serif;;
   font-size: inherit;
   line-height: inherit; }
 
@@ -289,7 +291,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  font-family: "Almarai", sans-serif;;
   font-weight: 500;
   line-height: 1.2;
   color: inherit; }
@@ -4747,7 +4749,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Almarai", sans-serif;;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -4832,7 +4834,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Almarai", sans-serif;;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -7766,7 +7768,7 @@ button.bg-dark:focus {
     margin-left: auto !important; } }
 
 .text-monospace {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  font-family: "Almarai", sans-serif;}
 
 .text-justify {
   text-align: justify !important; }
@@ -7993,7 +7995,7 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: "Nunito Sans", Arial, sans-serif;
+  font-family: "Almarai", sans-serif;;
   background: #fff;
   font-size: 16px;
   line-height: 1.8;
@@ -8050,7 +8052,7 @@ h1, h2, h3, h4, h5,
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 10px; } }
   .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
-    font-size: 15px;
+    font-size: 20px;
     padding-top: .9rem;
     padding-bottom: .9rem;
     padding-left: 20px;
@@ -8240,10 +8242,10 @@ h1, h2, h3, h4, h5,
 .slider-text {
   height: 600px; }
   .slider-text h1 {
-    font-size: 60px;
+    font-size: 48px;
     color: #000000;
     line-height: 1.1;
-    font-weight: 400; }
+    font-weight: bold; }
     .slider-text h1 span {
       display: block; }
   .slider-text .icon-wrap .icon {
@@ -8270,7 +8272,7 @@ h1, h2, h3, h4, h5,
       height: 2px;
       background: #fff; }
     .slider-text .icon-wrap .heading-title span {
-      font-family: "Nunito Sans", Arial, sans-serif;
+      font-family: "Almarai", sans-serif;;
       color: #fff; }
   .slider-text p {
     line-height: 1.5;
@@ -8783,13 +8785,25 @@ h1, h2, h3, h4, h5,
     margin-bottom: 30px; } }
 
 @media (min-width: 992px) {
+
   .wrap-about .heading-section {
     margin-left: -120px;
     background: #fff;
     -webkit-box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13);
     -moz-box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13);
-    box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13); } }
+    box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13); } 
+  
+  }
 
+  .wrap-about .cc {
+    text-align: center;
+    margin-left: 20px;
+    background: #fff;
+    -webkit-box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13);
+    box-shadow: -20px 5px 14px -15px rgba(0, 0, 0, 0.13); } 
+  
+  
 .services-section {
   position: relative;
   padding-bottom: 10em !important; }
@@ -9961,3 +9975,77 @@ textarea.form-control {
     .my-float{
       margin-top:16px;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    #select-container {
+      position: absolute;
+      width: 50px;
+      height: 40px;
+      background: #FFFFFF;
+      top: 50px; 
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 10px;
+      border: 0.5px solid rgba(202, 219, 226, 0.40);
+      box-shadow: 0px 3px 6px rgba(79, 104, 113, 0.20);
+      overflow: hidden;
+      transition: height 0.2s ease-in-out, border-radius 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+      
+      &:hover {
+        height: auto; /* Can't use height: auto & transition effect */
+        border-radius: 20px;
+        box-shadow: 0px 7px 10px rgba(79, 104, 113, 0.30);
+      }
+      ul {
+        list-style-type: none;
+        position: relative;
+        li {
+          opacity: 1;
+          transition: opacity 0.2s ease-in-out;
+          &:first-child {
+            img {
+              cursor: default;
+            }
+          }
+          img {
+            width: 25px;
+            height: 25px;
+            
+            display: block;
+            left: 50%;
+            transform: translate(-103%, -40%);
+            margin-bottom: 8px;
+        
+            border-radius: 50%;
+            border: 2px solid #FFFFFF;
+            box-shadow: 0px 0px 6px rgba(79, 104, 113, 0.30);
+            
+            cursor: pointer;
+            transition: all 0.1s ease-in-out;        
+            &:hover {
+              box-shadow: 0px 5px 10px rgba(79, 104, 113, 0.30);
+              transform: translate(-103%, -40%) scale(1.08);
+            }
+          }  
+        }
+      }
+    }
+    
+    
+    
+    
